--- a/PocAspNetMvc/bin/PocAspNetMvc.dll.config
+++ b/PocAspNetMvc/bin/PocAspNetMvc.dll.config
@@ -16,6 +16,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="vs:EnableBrowserLink" value="true"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -26,6 +27,11 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
+    <handlers>
+      <add name="Browser Link for HTML" path="*.html" verb="*" 
+           type="System.Web.StaticFileHandler, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" 
+           resourceType="File" preCondition="integratedMode" />
+    </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
